# salty-orm

./: .gitignore  LICENSE  README.md  requirements.in  requirements.txt  setup.cfg  setup.py
salty_orm/: requirements.in
salty_orm/db/: base_mysql.py  base_provider.py  base_sqlite3.py  model.py  mysql_provider.py  query.py  sqlite3_provider.py
salty_orm/examples/: cross_docs.py  models.py
salty_orm/utilities/: README.md  clone_django_models.py
tests/mysql_provider/: __init__.py  test_aggregate_functions.py  test_qoper_functions.py  test_simple_structure.py
