[metadata]
name = Salty-ORM
summary = A Python 3.x ORM implementing a Django ORM object model features, supports Sqlite and MySql.
author = Robert Abram
author-email = rabram991@gmail.com
license = MIT
home-page = https://github.com/robabram/Salty-ORM
description-file = README.md
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 4 - Beta,
              Programming Language :: Python,
              Environment :: Console,
              License :: MIT,
              Operating System :: POSIX :: Linux

# [entry_points]

[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
    salty_orm

# [extras]

# [test]
# py.test options when running `python setup.py test`
# addopts = tests

# [pytest]

# [aliases]
# test = pytest

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

# [build_sphinx]
# source_dir = docs
# build_dir = docs/_build

# [pbr]
# Let pbr run sphinx-apidoc
# autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
ignore = W391
max-line-length = 120

[bdist_rpm]
requires=
     python-pip-tools
     python-dateparser
     python-mysql-connector
     python-dateutil